Working out some Safari overflow issues

--- a/Interviews/Mattermost/Development/src/styles/global.sass
+++ b/Interviews/Mattermost/Development/src/styles/global.sass
@@ -30,6 +30,9 @@ $easeOutBack: cubic-bezier(0.175, 0.885, 0.32, 1.275)
 // Initial Setup
 // *************
 
+html, body
+  overflow-x: hidden
+
 html
   box-sizing: border-box
   font-size: 10px // Globally sets rems to increments of 10px. 1rem = 10px.
@@ -43,7 +46,6 @@ body
   margin: 0
   padding: 0
   background-color: $offWhite
-  overflow-x: hidden
 
 section
   margin-bottom: 10rem
